--- a/notebooks/RBDS_CNPq.ipynb
+++ b/notebooks/RBDS_CNPq.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7f4e9cc6",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "ccaabefc",
    "metadata": {
     "scrolled": false
@@ -300,7 +300,7 @@
        "[5 rows x 49 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,22 +325,301 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "aea0e3e3",
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'os' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_18232\\3304795563.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfname_q\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpathname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'RBDS_google_forms.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;31m# Import data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mdata_q\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfname_q\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msep\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m','\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex_col\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'ID'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mdata_q\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'os' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Primeiro nome</th>\n",
+       "      <th>Último nome</th>\n",
+       "      <th>E-mail</th>\n",
+       "      <th>Data de nascimento</th>\n",
+       "      <th>Altura (cm)</th>\n",
+       "      <th>Massa (kg)</th>\n",
+       "      <th>Gênero</th>\n",
+       "      <th>Membro inferior dominante</th>\n",
+       "      <th>Qual é o seu desempenho na corrida?</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Caso tenha respondido sim na questão anterior</th>\n",
+       "      <th>Data aproximada do inicio dos sintomas</th>\n",
+       "      <th>Quando você corre, os sintomas ocorrem...</th>\n",
+       "      <th>Número do tênis de corrida</th>\n",
+       "      <th>Marca do calçado</th>\n",
+       "      <th>Modelo do calçado</th>\n",
+       "      <th>Número de pares</th>\n",
+       "      <th>Com que frequência você substitui os ses tênis?</th>\n",
+       "      <th>Indique o nível de conforto do seu tênis de corrida atual</th>\n",
+       "      <th>Você utiliza algum objeto dentro do tênis?</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>BMC0012</th>\n",
+       "      <td>9/12/2016 15:31:28</td>\n",
+       "      <td>Rodrigo</td>\n",
+       "      <td>Lobo</td>\n",
+       "      <td>rodrigo@loboassessoria.com.br</td>\n",
+       "      <td>1/19/1983</td>\n",
+       "      <td>168.0</td>\n",
+       "      <td>57.05</td>\n",
+       "      <td>Masculino</td>\n",
+       "      <td>Direito</td>\n",
+       "      <td>Elite</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>39</td>\n",
+       "      <td>Asics</td>\n",
+       "      <td>DS Racer</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Menos de 6 meses</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Nenhum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BMC0014</th>\n",
+       "      <td>9/12/2016 9:21:17</td>\n",
+       "      <td>José</td>\n",
+       "      <td>Belarmino</td>\n",
+       "      <td>jose-belarmino@hotmail.com</td>\n",
+       "      <td>4/29/1977</td>\n",
+       "      <td>177.8</td>\n",
+       "      <td>78.30</td>\n",
+       "      <td>Masculino</td>\n",
+       "      <td>Direito</td>\n",
+       "      <td>Elite</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4/15/2015</td>\n",
+       "      <td>Piora no início da corrida e melhora progressi...</td>\n",
+       "      <td>42</td>\n",
+       "      <td>Adidas</td>\n",
+       "      <td>Adizero boost</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Entre 7 meses e 1 ano</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Nenhum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BMC0015</th>\n",
+       "      <td>9/12/2016 9:26:10</td>\n",
+       "      <td>Thiago</td>\n",
+       "      <td>Lima</td>\n",
+       "      <td>llthiago@hotmail.com</td>\n",
+       "      <td>11/19/1985</td>\n",
+       "      <td>182.9</td>\n",
+       "      <td>66.70</td>\n",
+       "      <td>Masculino</td>\n",
+       "      <td>Direito</td>\n",
+       "      <td>Competitivo</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Inflamação na fíbula esquerda</td>\n",
+       "      <td>12/15/2012</td>\n",
+       "      <td>Piora no início da corrida e melhora progressi...</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Adidas</td>\n",
+       "      <td>Adizero boost</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Menos de 6 meses</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Nenhum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BMC0016</th>\n",
+       "      <td>9/12/2016 9:30:58</td>\n",
+       "      <td>Yan</td>\n",
+       "      <td>Cardoso</td>\n",
+       "      <td>Yan.hollerbach@gmail.com</td>\n",
+       "      <td>8/20/1980</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>69.00</td>\n",
+       "      <td>Masculino</td>\n",
+       "      <td>Esquerdo</td>\n",
+       "      <td>Competitivo</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3/8/2016</td>\n",
+       "      <td>Piora no início da corrida e melhora progressi...</td>\n",
+       "      <td>41</td>\n",
+       "      <td>Asics</td>\n",
+       "      <td>Kayano/Noosa</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Entre 7 meses e 1 ano</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Nenhum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BMC0017</th>\n",
+       "      <td>9/12/2016 9:40:59</td>\n",
+       "      <td>Marcelo</td>\n",
+       "      <td>Duarte</td>\n",
+       "      <td>marcelo@</td>\n",
+       "      <td>7/22/1965</td>\n",
+       "      <td>173.2</td>\n",
+       "      <td>63.15</td>\n",
+       "      <td>Masculino</td>\n",
+       "      <td>Direito</td>\n",
+       "      <td>Recreacional competitivo</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Lesão IQT E</td>\n",
+       "      <td>9/8/2014</td>\n",
+       "      <td>Somente no fim da corrida ou no dia seguinte</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Asics</td>\n",
+       "      <td>Norsa 10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Menos de 6 meses</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Nenhum</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 50 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Timestamp Primeiro nome Último nome  \\\n",
+       "ID                                                      \n",
+       "BMC0012  9/12/2016 15:31:28       Rodrigo        Lobo   \n",
+       "BMC0014   9/12/2016 9:21:17          José   Belarmino   \n",
+       "BMC0015   9/12/2016 9:26:10        Thiago        Lima   \n",
+       "BMC0016   9/12/2016 9:30:58           Yan     Cardoso   \n",
+       "BMC0017   9/12/2016 9:40:59       Marcelo      Duarte   \n",
+       "\n",
+       "                                E-mail Data de nascimento  Altura (cm)  \\\n",
+       "ID                                                                       \n",
+       "BMC0012  rodrigo@loboassessoria.com.br          1/19/1983        168.0   \n",
+       "BMC0014     jose-belarmino@hotmail.com          4/29/1977        177.8   \n",
+       "BMC0015           llthiago@hotmail.com         11/19/1985        182.9   \n",
+       "BMC0016       Yan.hollerbach@gmail.com          8/20/1980        180.0   \n",
+       "BMC0017                       marcelo@          7/22/1965        173.2   \n",
+       "\n",
+       "         Massa (kg)     Gênero Membro inferior dominante  \\\n",
+       "ID                                                         \n",
+       "BMC0012       57.05  Masculino                   Direito   \n",
+       "BMC0014       78.30  Masculino                   Direito   \n",
+       "BMC0015       66.70  Masculino                   Direito   \n",
+       "BMC0016       69.00  Masculino                  Esquerdo   \n",
+       "BMC0017       63.15  Masculino                   Direito   \n",
+       "\n",
+       "        Qual é o seu desempenho na corrida?  ...  \\\n",
+       "ID                                           ...   \n",
+       "BMC0012                               Elite  ...   \n",
+       "BMC0014                               Elite  ...   \n",
+       "BMC0015                         Competitivo  ...   \n",
+       "BMC0016                         Competitivo  ...   \n",
+       "BMC0017            Recreacional competitivo  ...   \n",
+       "\n",
+       "        Caso tenha respondido sim na questão anterior  \\\n",
+       "ID                                                      \n",
+       "BMC0012                                           NaN   \n",
+       "BMC0014                                           NaN   \n",
+       "BMC0015                 Inflamação na fíbula esquerda   \n",
+       "BMC0016                                           NaN   \n",
+       "BMC0017                                   Lesão IQT E   \n",
+       "\n",
+       "         Data aproximada do inicio dos sintomas  \\\n",
+       "ID                                                \n",
+       "BMC0012                                     NaN   \n",
+       "BMC0014                               4/15/2015   \n",
+       "BMC0015                              12/15/2012   \n",
+       "BMC0016                                3/8/2016   \n",
+       "BMC0017                                9/8/2014   \n",
+       "\n",
+       "                 Quando você corre, os sintomas ocorrem...  \\\n",
+       "ID                                                           \n",
+       "BMC0012                                                NaN   \n",
+       "BMC0014  Piora no início da corrida e melhora progressi...   \n",
+       "BMC0015  Piora no início da corrida e melhora progressi...   \n",
+       "BMC0016  Piora no início da corrida e melhora progressi...   \n",
+       "BMC0017       Somente no fim da corrida ou no dia seguinte   \n",
+       "\n",
+       "         Número do tênis de corrida  Marca do calçado  Modelo do calçado  \\\n",
+       "ID                                                                         \n",
+       "BMC0012                          39             Asics           DS Racer   \n",
+       "BMC0014                          42            Adidas      Adizero boost   \n",
+       "BMC0015                          40            Adidas      Adizero boost   \n",
+       "BMC0016                          41             Asics       Kayano/Noosa   \n",
+       "BMC0017                          40             Asics           Norsa 10   \n",
+       "\n",
+       "         Número de pares  Com que frequência você substitui os ses tênis?  \\\n",
+       "ID                                                                          \n",
+       "BMC0012                2                                 Menos de 6 meses   \n",
+       "BMC0014                1                            Entre 7 meses e 1 ano   \n",
+       "BMC0015                2                                 Menos de 6 meses   \n",
+       "BMC0016                4                            Entre 7 meses e 1 ano   \n",
+       "BMC0017                1                                 Menos de 6 meses   \n",
+       "\n",
+       "        Indique o nível de conforto do seu tênis de corrida atual  \\\n",
+       "ID                                                                  \n",
+       "BMC0012                                                  7          \n",
+       "BMC0014                                                  9          \n",
+       "BMC0015                                                  8          \n",
+       "BMC0016                                                  8          \n",
+       "BMC0017                                                  6          \n",
+       "\n",
+       "        Você utiliza algum objeto dentro do tênis?  \n",
+       "ID                                                  \n",
+       "BMC0012                                     Nenhum  \n",
+       "BMC0014                                     Nenhum  \n",
+       "BMC0015                                     Nenhum  \n",
+       "BMC0016                                     Nenhum  \n",
+       "BMC0017                                     Nenhum  \n",
+       "\n",
+       "[5 rows x 50 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -360,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "09ed4721",
    "metadata": {},
    "outputs": [],
@@ -371,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "5fa6c38e",
    "metadata": {},
    "outputs": [
@@ -399,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "6c22013c",
    "metadata": {},
    "outputs": [
@@ -409,7 +688,7 @@
        "23"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "id": "bed16070",
    "metadata": {},
    "outputs": [
@@ -452,7 +731,7 @@
        " ['BMC0040']]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
