--- a/notebooks/RIC_RBDS_debugg_join_ang_Reginaldo.ipynb
+++ b/notebooks/RIC_RBDS_debugg_join_ang_Reginaldo.ipynb
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "id": "4e07f23d-7433-443c-9043-f222e1fafc90",
    "metadata": {},
    "outputs": [],
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "id": "48339bf1-8bbf-4110-9d9f-65668906d757",
    "metadata": {},
    "outputs": [],
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "id": "2044ec8c-7ab3-464f-9a80-118ac235edbf",
    "metadata": {},
    "outputs": [],
@@ -669,28 +669,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "a3727d8b-10fc-43af-9a14-e17747d2a408",
+   "execution_count": 27,
+   "id": "3a5e140d-52d7-4094-a464-95f1b7c93fcf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5000, 3)"
+       "array([[ 0.88638083,  0.22357025,  0.40539532],\n",
+       "       [-0.25672816,  0.96606171,  0.0285555 ],\n",
+       "       [-0.38525274, -0.12938744,  0.91369536]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "bs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "ea857ee2-de25-418d-b5c0-8d2621cc821f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.79756139,  0.13523966,  0.58788269],\n",
+       "       [-0.30838288,  0.92898463,  0.2046645 ],\n",
+       "       [-0.51845523, -0.34452546,  0.78262787]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acbac65c-667c-41ff-822f-c34e60d02819",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array([[ 0.29522664,  0.24700305,  0.92294676],\n",
+    "       [ 0.30225533,  0.89224519, -0.33547017],\n",
+    "       [-0.90635696,  0.37800531,  0.18875656]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3727d8b-10fc-43af-9a14-e17747d2a408",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "angle_R_ankle.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "d323b7b5-7940-403c-8cb7-cb78b5fa3e5e",
    "metadata": {},
    "outputs": [],
@@ -700,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "f7abd95a-6eed-4716-8220-63407d718047",
    "metadata": {},
    "outputs": [],
@@ -752,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "bfc2ca6f-cb1f-473a-accc-c5c2a18c5b04",
    "metadata": {},
    "outputs": [],
