--- a/notebooks/Batch_process.ipynb
+++ b/notebooks/Batch_process.ipynb
@@ -564,7 +564,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "info_both.to_csv(os.path.join(dir_data, 'info_both.csv'))"
+    "#info_both.to_csv(os.path.join(dir_data, 'info_both.csv'))"
    ]
   },
   {
