--- a/notebooks/DataInBrief2.ipynb
+++ b/notebooks/DataInBrief2.ipynb
@@ -816,14 +816,44 @@
     "# reorder planes of angles\n",
     "for fname in metadata['filename']:\n",
     "    print(fname[:5], end=' ')\n",
-    "    angs = pd.read_csv(path2 / fname, header=0, sep='\\t', index_col=0)\n",
-    "    if angs.columns[0][-1] == 'Z':\n",
+    "    df = pd.read_csv(path2 / fname, header=0, sep='\\t', index_col=0)\n",
+    "    if df.columns[0][4] == 'Z':\n",
     "        print('Planes already reordered.')\n",
     "        break\n",
-    "    order = [np.array([2, 0, 1, 5, 3, 4, 8, 6, 7])+9*i for i in range(int(angs.shape[1]/9))]\n",
+    "    order = [np.array([2, 0, 1, 5, 3, 4, 8, 6, 7])+9*i for i in range(int(df.shape[1]/9))]\n",
     "    order = np.array(order).flatten()\n",
-    "    angs = angs.iloc[:, order]\n",
-    "    angs.to_csv(path2 / fname, sep='\\t', float_format=None, index=True)"
+    "    df = df.iloc[:, order]\n",
+    "    df.to_csv(path2 / fname, sep='\\t', float_format=None, index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c2f404d3-28a1-4644-b9fa-5d7b4abe6402",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BMC01 Columns already renamed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# rename columns\n",
+    "joints = ['Hip', 'Knee', 'Ankle']\n",
+    "axes   = ['Z', 'X', 'Y']\n",
+    "planes = ['Sagittal', 'Frontal', 'Transverse']\n",
+    "for fname in metadata['filename']:\n",
+    "    print(fname[:5], end=' ')\n",
+    "    df = pd.read_csv(path2 / fname, header=0, sep='\\t', index_col=0)\n",
+    "    if df.columns[0] == 'Hip_Z_1':\n",
+    "        print('Columns already renamed.')\n",
+    "        break\n",
+    "    names = [f'{j}_{a}_{t}' for t in range(1, int(df.shape[1]/9)+1) for j in joints for a in axes]\n",
+    "    df.columns = names\n",
+    "    df.to_csv(path2 / fname, sep='\\t', float_format=None, index=True)"
    ]
   },
   {
@@ -836,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5c0b031c-bd4b-4812-bf1b-e87dc343b52a",
    "metadata": {},
    "outputs": [],
@@ -884,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "bba422c8-5e39-457b-9ef1-decc7d9f913c",
    "metadata": {},
    "outputs": [
