--- a/notebooks/DataInBrief2.ipynb
+++ b/notebooks/DataInBrief2.ipynb
@@ -912,13 +912,16 @@
     "    data = np.full([101, len(joints)*len(axes), len(fnames)], np.nan)\n",
     "    for s, subject in enumerate(fnames):\n",
     "        try:\n",
-    "            y = np.loadtxt(path2 / subject, skiprows=1)[:, 1:]  # drop time column\n",
+    "            y = np.loadtxt(path2 / subject, skiprows=1)\n",
+    "            y = y[:, 1:]  # drop time column\n",
     "        except:\n",
+    "            y = np.nan\n",
     "            print(f'File {subject} not loaded.')\n",
     "        ym = np.full([101, len(joints)*len(axes)], np.nan)\n",
-    "        for j in range(len(joints)):\n",
-    "            for ax in range(len(axes)):\n",
-    "                ym[:, 3*j+ax] = np.nanmedian(y[:, 3*j + ax:y.shape[1]-(3*j+ax+1):len(joints)*len(axes)], axis=1)\n",
+    "        if not np.all(np.isnan(y)):\n",
+    "            for j in range(len(joints)):\n",
+    "                for ax in range(len(axes)):\n",
+    "                    ym[:, 3*j+ax] = np.nanmedian(y[:, 3*j + ax:y.shape[1]-(3*j+ax+1):len(joints)*len(axes)], axis=1)\n",
     "        data[:, :, s] = ym\n",
     "    # Mean and std across subjects\n",
     "    ang_m[:, :, l]  = np.nanmean(data, axis=2)\n",
