--- a/notebooks/BMC_RIC_dataset.ipynb
+++ b/notebooks/BMC_RIC_dataset.ipynb
@@ -46,39 +46,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "id": "7f4e9cc6",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7f4e9cc6",
-        "outputId": "bbd76a82-a56e-49f5-badb-653953934b21",
-        "tags": []
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/198.6 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m198.6/198.6 kB\u001b[0m \u001b[31m9.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Building wheel for littleutils (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.5/8.5 MB\u001b[0m \u001b[31m28.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m511.6/511.6 kB\u001b[0m \u001b[31m10.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m24.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hPython 3.10.12 (main, Jun  7 2023, 12:45:35) [GCC 9.4.0] on Linux-5.15.107+-x86_64-with-glibc2.31\n",
-            " platform==1.0.8\n",
-            " numpy==1.22.4\n",
-            " pandas==1.5.3\n",
-            " seaborn==0.12.2\n",
-            " pingouin==0.5.3\n",
-            " spm1d==0.4.19 (2023-06-22)\n",
-            " ipympl==0.9.3\n",
-            "10/07/2023 18:42:16\n"
-          ]
-        }
-      ],
       "source": [
         "#@title ### import libraries {display-mode: \"form\"}\n",
         "import sys, os, platform, glob, datetime\n",
@@ -88,12 +55,12 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "from tqdm.notebook import tqdm\n",
-        "# import/install less common libraries\n",
+        "# import/install libraries\n",
         "def import_or_install(pkgs):\n",
         "    import importlib\n",
         "    if isinstance(pkgs, str): pkgs = [pkgs]\n",
         "    for pkg in pkgs:\n",
-        "        if isinstance(pkg, str) or len(pkgs)==1: pkg = [pkg, pkg]\n",
+        "        if isinstance(pkg, str) or len(pkg)==1: pkg = [pkg, pkg]\n",
         "        x, y = pkg[0], pkg[1]\n",
         "        try:\n",
         "            globals()[y] = importlib.import_module(x)  # need globals bc inside function\n",
@@ -114,6 +81,157 @@
         "print(f'Python {sys.version} on {platform.platform()}')\n",
         "print('\\n'.join(f' {m.__name__}=={m.__version__}' for m in globals().values() if getattr(m, '__version__', None)))\n",
         "print(datetime.datetime.now().strftime(\"%d/%m/%Y %H:%M:%S\"), sep='\\n')"
+      ],
+      "metadata": {
+        "id": "Pq0EBo_lLf3T",
+        "outputId": "3added52-b553-4672-e90d-f77ae903e6e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "Pq0EBo_lLf3T",
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/198.6 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m \u001b[32m194.6/198.6 kB\u001b[0m \u001b[31m7.1 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m198.6/198.6 kB\u001b[0m \u001b[31m5.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Building wheel for littleutils (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.5/8.5 MB\u001b[0m \u001b[31m24.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m511.6/511.6 kB\u001b[0m \u001b[31m8.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m41.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hPython 3.10.12 (main, Jun  7 2023, 12:45:35) [GCC 9.4.0] on Linux-5.15.107+-x86_64-with-glibc2.31\n",
+            " platform==1.0.8\n",
+            " numpy==1.22.4\n",
+            " pandas==1.5.3\n",
+            " seaborn==0.12.2\n",
+            " pingouin==0.5.3\n",
+            " spm1d==0.4.19 (2023-06-22)\n",
+            " ipympl==0.9.3\n",
+            "10/07/2023 19:16:23\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "id": "7f4e9cc6",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7f4e9cc6",
+        "outputId": "eb1495bd-dec2-4e6e-82b6-688ce7d81104",
+        "tags": []
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "pkgs: [['pingouin', 'pg'], 'spm1d', 'ipympl']\n",
+            "pkg: ['pingouin', 'pg']\n",
+            "x: pingouin y: pg\n",
+            "pingouin imported as pg.\n",
+            "pkg: spm1d\n",
+            "x: spm1d y: spm1d\n",
+            "spm1d imported as spm1d.\n",
+            "pkg: ipympl\n",
+            "x: ipympl y: ipympl\n",
+            "ipympl imported as ipympl.\n"
+          ]
+        }
+      ],
+      "source": [
+        "#@title ### import libraries {display-mode: \"form\"}\n",
+        "import sys, os, platform, glob, datetime\n",
+        "from pathlib import Path\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "from tqdm.notebook import tqdm\n",
+        "# import/install less common libraries\n",
+        "def import_or_install(pkgs):\n",
+        "    import importlib\n",
+        "    if isinstance(pkgs, str): pkgs = [pkgs]\n",
+        "    print('pkgs:', pkgs)\n",
+        "    for pkg in pkgs:\n",
+        "        print('pkg:', pkg)\n",
+        "        if isinstance(pkg, str) or len(pkg)==1: pkg = [pkg, pkg]\n",
+        "        x, y = pkg[0], pkg[1]\n",
+        "        print('x:', x, 'y:', y)\n",
+        "        try:\n",
+        "            sys.modules[y] = __import__(x)\n",
+        "            globals()[y] = importlib.import_module(x)\n",
+        "            print(f'{x} imported as {y}.')\n",
+        "        except ImportError:\n",
+        "            !pip install -q --upgrade $x\n",
+        "            print(f'{x} installed.')\n",
+        "            globals()[y] = importlib.import_module(x)\n",
+        "            print(f'{x} imported as {y}.')\n",
+        "\n",
+        "import_or_install([['pingouin', 'pg'], 'spm1d', 'ipympl'])\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pkgs = [['pingouin', 'pg']]\n",
+        "pkg = ['pingouin', 'pg']\n",
+        "\n",
+        "isinstance(pkg, str) or len(pkg)==1"
+      ],
+      "metadata": {
+        "id": "jPOiJbP6M8Hk",
+        "outputId": "e2af05be-83a1-49ed-e219-a45d8c85a826",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "jPOiJbP6M8Hk",
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import_or_install([['matplotlib.pyplot', 'plt']])"
+      ],
+      "metadata": {
+        "id": "6AQAwdNFLFJz",
+        "outputId": "835dfbf8-85c8-4f96-df1e-7e646732fa61",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "6AQAwdNFLFJz",
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "pkgs: [['matplotlib.pyplot', 'plt']]\n",
+            "pkg: ['matplotlib.pyplot', 'plt']\n",
+            "x: matplotlib.pyplot y: plt\n",
+            "matplotlib.pyplot imported as plt.\n"
+          ]
+        }
       ]
     },
     {
@@ -138,12 +256,12 @@
         "pd.set_option('display.precision', 3)"
       ],
       "metadata": {
-        "id": "2G9cubEB1mDk",
-        "outputId": "40ba5d7d-c877-46ee-8caf-bb0ab4ed37c1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 77
-        }
+        },
+        "id": "2G9cubEB1mDk",
+        "outputId": "40ba5d7d-c877-46ee-8caf-bb0ab4ed37c1"
       },
       "id": "2G9cubEB1mDk",
       "execution_count": 2,
