--- a/notebooks/BMC_RIC_dataset.ipynb
+++ b/notebooks/BMC_RIC_dataset.ipynb
@@ -64,15 +64,17 @@
         "    \"\"\"mds: list (or list of lists) of modules, e.g. [['pandas', 'pd'], 'ipympl']\n",
         "    ['pandas', 'pd'] will import pandas as pd\n",
         "    \"\"\"\n",
-        "    import importlib\n",
+        "    import importlib, subprocess\n",
         "    for m in mds:\n",
         "        if isinstance(m, str) or len(m)==1: m = [m, m]\n",
         "        x, y = m[0], m[1]\n",
         "        try:\n",
-        "            globals()[y] = importlib.import_module(x)  # need globals inside function\n",
+        "            globals()[m[1]] = importlib.import_module(m[0])  # need globals inside function\n",
         "        except ImportError:\n",
-        "            !pip install -q --upgrade $x\n",
-        "            globals()[y] = importlib.import_module(x)\n",
+        "            print(f'Installing {m[0]} ... ', end='')\n",
+        "            subprocess.check_call([sys.executable, '-m', 'pip', 'install', '--upgrade', m[0]])  # silent/reliable\n",
+        "            print('done.')\n",
+        "            globals()[m[1]] = importlib.import_module(m[0])\n",
         "    print('\\n'.join(f' {m.__name__}=={m.__version__}' for m in globals().values() if getattr(m, '__version__', None)))\n",
         "\n",
         "import_or_install([['pingouin', 'pg'], 'spm1d', 'ipympl'])\n",
@@ -90,24 +92,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Pq0EBo_lLf3T",
-        "outputId": "30962a86-06fe-40a3-8144-15e5733ff1a3"
+        "outputId": "31aa6dc7-085b-450e-bbcc-27ce76a310cd"
       },
       "id": "Pq0EBo_lLf3T",
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Python 3.10.12 (main, Jun  7 2023, 12:45:35) [GCC 9.4.0] on Linux-5.15.107+-x86_64-with-glibc2.31\n",
-            "10/07/2023 20:56:59\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m198.6/198.6 kB\u001b[0m \u001b[31m8.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Building wheel for littleutils (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.5/8.5 MB\u001b[0m \u001b[31m58.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m511.6/511.6 kB\u001b[0m \u001b[31m14.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m58.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h platform==1.0.8\n",
+            "10/07/2023 22:38:52\n",
+            " platform==1.0.8\n",
             " numpy==1.22.4\n",
             " pandas==1.5.3\n",
             " seaborn==0.12.2\n",
