--- a/notebooks/BMC_RIC_dataset0.ipynb
+++ b/notebooks/BMC_RIC_dataset0.ipynb
@@ -798,7 +798,7 @@
     "        s = fname[3:5]\n",
     "        fname2 = f'g{g+1:02d}s{s}t{t+1:02d}.txt'\n",
     "        # Group Subject Trial Filename Speed Age Height Mass\n",
-    "        row = [f'{g+1}', f'{int(s)}', f'{t+1}', fname2]\n",
+    "        row = [f'{groups[g]}', f'{int(s)}', f'{t+1}', fname2]\n",
     "        row.extend(metadata.loc[metadata['Filename']==fname, ['Speed', 'Age', 'Height', 'Mass']].values.tolist()[0])\n",
     "        metadata2.loc[meta2.shape[0]] = row\n",
     "        dft = df.iloc[:, 9*t:9*(t+1)]\n",
@@ -906,7 +906,7 @@
    "source": [
     "#@title #### Load and process all trials {display-mode: \"form\"}\n",
     "groups = metadata2['Group'].unique()\n",
-    "nsubjects = metadata2[metadata2['Group']==1]['Subject'].unique().size\n",
+    "nsubjects = metadata2[metadata2['Group']==groups[0]]['Subject'].unique().size\n",
     "ang_all = np.full([101, len(joints)*len(axes), nsubjects, len(groups)], np.nan)\n",
     "ang_m   = np.full([101, len(joints)*len(axes), len(labs)], np.nan)\n",
     "ang_sd  = np.full([101, len(joints)*len(axes), len(labs)], np.nan)\n",
