--- a/notebooks/BMC_RIC_dataset.ipynb
+++ b/notebooks/BMC_RIC_dataset.ipynb
@@ -53,19 +53,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2Jtl99supR9p",
-        "outputId": "94802a5d-829f-447f-821f-50f2061069cc"
+        "outputId": "09912131-dbfe-4760-f754-cb2a7b3ee360"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Python 3.10.6 (main, May 29 2023, 11:10:38) [GCC 11.3.0] on linux\n",
-            " numpy 1.22.4\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/198.6 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━\u001b[0m \u001b[32m122.9/198.6 kB\u001b[0m \u001b[31m3.4 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m198.6/198.6 kB\u001b[0m \u001b[31m3.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Building wheel for littleutils (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.5/8.5 MB\u001b[0m \u001b[31m7.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m511.6/511.6 kB\u001b[0m \u001b[31m7.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m47.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hPython 3.10.12 (main, Jun 11 2023, 05:26:28) [GCC 11.4.0] on linux\n",
+            " numpy 1.23.5\n",
             " pandas 1.5.3\n",
             " pingouin 0.5.3\n",
-            " spm1d 0.4.20 (2023-07-22)\n",
-            "25/07/2023 21:08:58\n"
+            " spm1d 0.4.21 (2023-09-03)\n",
+            "20/09/2023 19:39:59\n"
           ]
         }
       ],
@@ -128,7 +134,7 @@
           "height": 76
         },
         "id": "2G9cubEB1mDk",
-        "outputId": "8e1cddec-124e-49d4-938c-66123cae981b"
+        "outputId": "bfa5eb3f-e7c9-4a66-c71e-673ea3f3e881"
       },
       "outputs": [
         {
@@ -184,7 +190,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "177eedd0-b913-4651-b446-2213d3bca1f6",
-        "outputId": "494487d7-60dc-4bcd-ec7a-f6c476440b5b",
+        "outputId": "7b0228da-42d0-458a-c942-9fa0cbf445cf",
         "tags": []
       },
       "outputs": [
@@ -229,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "841873cf-365d-4b0c-8f45-eedf98a5aaf3",
       "metadata": {
         "id": "841873cf-365d-4b0c-8f45-eedf98a5aaf3",
@@ -292,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "151c2430-63d9-4432-84cf-99cfba021187",
       "metadata": {
         "colab": {
@@ -648,7 +654,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "7e1e6778-e650-4720-856d-295209f9e40b",
       "metadata": {
         "colab": {
@@ -990,7 +996,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "4c261913-cc12-4f8e-a132-e26a4b124769",
       "metadata": {
         "colab": {
@@ -1028,7 +1034,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "16b46043-e08c-499b-b08e-1fd83d64891f",
       "metadata": {
         "colab": {
@@ -1609,7 +1615,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "8966cdd0-f1fc-4c62-a8ce-3a6c214551b0",
       "metadata": {
         "colab": {
@@ -1750,7 +1756,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "1b5dc4a7-235c-43ec-9f6c-54f9b7c568c4",
       "metadata": {
         "colab": {
@@ -2315,7 +2321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "9f50efa7-9211-4cf2-ade0-d97992831899",
       "metadata": {
         "colab": {
@@ -2399,7 +2405,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "9e70486f-d374-40c0-9ad9-ddca00a4033c",
       "metadata": {
         "colab": {
@@ -2584,7 +2590,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "ad1a9f51-c8bc-4ebf-b44e-390ee032ce49",
       "metadata": {
         "colab": {
